fixed recent dropdown on small screens

--- a/static/css/bandhu.css
+++ b/static/css/bandhu.css
@@ -556,7 +556,7 @@
     z-index:250;
     top:79px;
     right:60px;
-    width:300px !important;
+    /* width:300px !important; */
 }
 
 .recent-activities-btn {
@@ -577,7 +577,7 @@
 }
 
 .recent-activities-btn:hover {
-    width:350px !important;
+    /* width:350px !important; */
     outline:none;
     background-color: #d37e00 !important;
     color:white;
@@ -590,6 +590,29 @@
     overflow-y: auto;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+@media screen and (max-width: 575px){
+    .recent-activities {
+        right: unset;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .recent-activities-btn {
+        width: 85vw !important;
+    }
+    .recent-activities-collapse {
+        width: 85vw !important;
+    }
+}
+
+@media screen and (max-width: 400px){
+    .recent-activities-btn {
+        width: 92vw !important;
+    }
+    .recent-activities-collapse {
+        width: 92vw !important;
+    }
 }
 
 .recent-activity-card {
